--- a/src/deb/php/control
+++ b/src/deb/php/control
@@ -3,8 +3,8 @@ Package: vesta-php
 Priority: optional
 Version: 0.9.8-26
 Section: admin
-Maintainer: Predrag Damnjanovic <predrag@myvestacp.com>
-Homepage: http://myvestacp.com
+Maintainer: myVesta <info@myvestacp.com>
+Homepage: https://www.myvestacp.com
 Architecture: amd64
 Depends: vesta
 Description: Vesta php-fpm
