deb11 proftpd identlookups fix

--- a/install/debian/11/proftpd/proftpd.conf
+++ b/install/debian/11/proftpd/proftpd.conf
@@ -28,7 +28,9 @@ SystemLog                       /var/log/proftpd/proftpd.log
 
 <Global>
   Umask                         002
-  IdentLookups                  off
+  <IfModule mod_ident.c>
+    IdentLookups                  off
+  </IfModule>
   AllowOverwrite                yes
   <Limit ALL SITE_CHMOD>
     AllowAll
