--- a/src/deb/for-download/nginx/nginx-deb12.conf
+++ b/src/deb/for-download/nginx/nginx-deb12.conf
@@ -78,7 +78,7 @@ http {
 
     # Vhost
     server {
-        listen          8083;
+        listen          8083 ssl;
         server_name     _;
         root            /usr/local/vesta/web;
         charset         utf-8;
