--- a/install/debian/12/exim/exim4.conf.template
+++ b/install/debian/12/exim/exim4.conf.template
@@ -143,7 +143,7 @@ acl_check_rcpt:
   
   warn    !authenticated = *
           hosts          = !+relay_from_hosts
-          ondition     = ${lookup{$local_part@$domain}lsearch{/etc/exim4/domains/${lookup{$domain}dsearch{/etc/exim4/domains/}}/aliases}{true}{false}}
+          condition     = ${lookup{$local_part@$domain}lsearch{/etc/exim4/domains/${lookup{$domain}dsearch{/etc/exim4/domains/}}/aliases}{true}{false}}
           set acl_m3    = yes
 
   deny    message       = Restricted characters in address
