deb12 exim4: message_linelength_limit = 1G
Preventing exim4 error: message has lines too long for transport

--- a/install/debian/12/exim/exim4.conf.template
+++ b/install/debian/12/exim/exim4.conf.template
@@ -355,6 +355,7 @@ remote_smtp:
   dkim_strict = 0
   hosts_try_fastopen = 
   hosts_try_chunking = !93.188.3.0/24
+  message_linelength_limit = 1G
 
 procmail:
   driver = pipe
